added buying functionality

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,5 +1,5 @@
-- @items.each do |i|
-	-if @current_user.id == i.user_id
+- @items.each do |i|  
+	- if @current_user.id == i.user_id
 		%br
 		%br
 		Item Name:
@@ -13,5 +13,22 @@
 		%br
 		= link_to "Edit", edit_item_path(i), method: :get
 		= link_to "Remove", item_path(i), method: :delete
+		%br
+		%br
+
+- @items.each do |i|
+	- if @current_user.type == "Buyer"
+		%br
+		%br
+		Item Name:
+		= i.name
+		%br
+		Price:
+		= i.price
+		%br
+		Status:
+		= i.status
+		%br
+		= link_to "Buy", buy_item_path(i), method: :get
 		%br
 		%br
