--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,6 @@
 Sign Up!
 
-= form_for @new_user, url: users_path, method: :post do |u|
+= form_for @new_user, url: items_path, method: :post do |u|
 	E-mail address:
 	= u.email_field :email
 	%br
