--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -7,5 +7,9 @@
 		= @item.price
 		%br
 		= i.hidden_field :status, value: "SOLD"
+		= i.fields_for :offer do |o|
+			= o.hidden_field :seller_id, value: @item.user_id
+			= o.hidden_field :buyer_id, value: @current_user.id
 		%br
-		= i.submit "Buy"
+		-if @item.status == "FOR SALE"
+			= i.submit "Buy"
