--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,98 @@
 <!DOCTYPE html>
 <html>
 <head>
+	   <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+
+    <title>E-commerce</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="starter-template.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
   <title>ECommerceApp</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">E-commerce Site</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/items">Items</a></li>
 
-	<% if current_user %>
-		<%= "#{@current_user.email}" %>
-		<%= link_to "Log Out", logout_path %>
-	<% else %>
-		<%= link_to "Log In", login_path %>
-	<% end %>	
+            <% if current_user.nil? %>
+            	<li><a href="/buyers/new">Buyer Sign Up</a></li>
+            	<li><a href="/sellers/new">Seller Sign Up</a></li>
+            <% end %>
 
-	<% flash.each do |name, msg| %>
-		<%= content_tag :div, msg, :id => "flash_#{name}" %>
-	<% end %>
+            <% if current_user && current_user.type == "Buyer" %>
+            	<li><a href="/items/checkout">My Cart</a></li>
+            <% end %>
+
+            <% if current_user && current_user.type == "Seller" %>
+            	<li><a href="/items/new">Add Items</a></li>
+            <% end %>
+
+            <% if current_user %>
+							<li><a><%= "#{@current_user.email}" %></li></a>
+							<li><a><li><a href="/logout">Log Out</a></li></li></a>
+						<% else %>
+							<li><a><li><a href="/login">Log In</a></li></li></a>
+						<% end %>
+
+						<% flash.each do |name, msg| %>
+							<li><a><%= content_tag :div, msg, :id => "flash_#{name}" %></li></a>
+						<% end %>
+
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+
+      <div class="starter-template">
+        <h1></h1>
+        <p class="lead"><br></p>
 
 <%= yield %>
+
+      </div>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
